# dota-dog

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  deploy.env.example  docker-compose.portainer.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  stack.env  stack.prod.env.example
.github/workflows/: ci-cd.yml
docker/: Dockerfile
docs/: agent_technical_spec.md  self-hosted-runner-deploy.md
src/dota_dog/: __init__.py  app.py  bootstrap.py  healthcheck.py  import_legacy.py  logging.py  settings.py  worker.py
src/dota_dog/bot/handlers/: common.py
src/dota_dog/domain/: enums.py  models.py
src/dota_dog/infra/db/: models.py  runtime.py  session.py
src/dota_dog/infra/db/migrations/: env.py
src/dota_dog/infra/db/migrations/versions/: 20260310_000001_initial.py  (+3 more)
src/dota_dog/infra/db/repositories/: core.py
src/dota_dog/infra/opendota/: client.py  schemas.py
src/dota_dog/infra/telegram/: bot.py  messages.py  sender.py
src/dota_dog/jobs/: poll_matches.py  send_reports.py
src/dota_dog/services/: backfill.py  constants.py  formatter.py  legacy_import.py  match_statistics.py  permissions.py  reporting.py  tracking.py
tests/: test_backfill_service.py  test_constants_service.py  test_formatter.py  test_handler_utils.py  test_handlers.py  test_match_statistics.py  test_opendota_client.py  test_opendota_schemas.py  test_permissions.py  test_poll_matches_job.py  test_reporting.py  test_runtime_state.py  test_send_reports_job.py  test_telegram_bot.py  test_telegram_messages.py  test_topic_repository.py  test_tracking.py
