[project]
name = "dota-dog"
version = "0.1.0"
description = "Telegram bot and worker for tracking Dota 2 matches."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiogram>=3.18.0,<4.0.0",
  "alembic>=1.14.1,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "greenlet>=3.2.0,<4.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "structlog>=25.2.0,<26.0.0",
  "aiosqlite>=0.21.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.25.3,<1.0.0",
  "ruff>=0.11.0,<1.0.0",
  "ty>=0.0.1a12,<0.1.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dota_dog"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["old_code"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "ASYNC",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ty.src]
include = ["src", "tests"]
